[package]
name = "find-images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.27", features = ["derive", "env"]}
dkregistry ={git="https://github.com/camallo/dkregistry-rs.git"}
futures-util = "0.3.25"
http = "0.2.8"
tokio = {version="1.22.0",features = ["full"]}
